// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProposalSubmitButtonComponent snapshot must match the snapshot by default 1`] = `
.c3 {
  display: none;
  visibility: hidden;
}

.c1 {
  margin-right: 0.375rem;
}

.c0 {
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Roboto Condensed Bold',Arial,serif;
  font-weight: bold;
  font-size: 0.875rem;
  border: none;
  border-radius: 1.875rem;
  text-transform: uppercase;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  padding: 0.3125rem 0.9375rem;
  color: rgb(255,255,255);
  background: rgb(118,118,118);
  background-color: rgb(118,118,118);
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2);
  padding: 0.3125rem 0.625rem;
}

.c2 {
  margin-right: 0.375rem;
  margin: 0;
}

@media (min-width:47.94rem) {
  .c3 {
    display: block;
    visibility: visible;
  }
}

@media (min-width:47.94rem) {
  .c1 {
    margin-right: 0.625rem;
  }
}

@media (min-width:47.94rem) {
  .c0 {
    font-size: 1rem;
  }
}

@media (min-width:47.94rem) {
  .c0 {
    padding: 0.5625rem 1.25rem;
  }
}

@media (min-width:47.94rem) {
  .c2 {
    margin-right: 0.625rem;
  }
}

<button
  className="c0"
  disabled={true}
  id="proposal-submit-button"
  type="submit"
>
  <span
    className="ButtonElements__IconInButton-sc-13hw5ul-9 c1 c2"
  >
    <svg
      aria-hidden={true}
      className="svg-inline--fa fa-pencil-alt fa-w-16 "
      data-icon="pencil-alt"
      data-prefix="fas"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
  <div
    className="c3 HiddenElements__HiddenOnMobile-sc-1k80phd-1 c3"
  >
    common.propose
  </div>
</button>
`;

exports[`ProposalSubmitButtonComponent snapshot must match the snapshot if field is collapsed 1`] = `
.c3 {
  display: none;
  visibility: hidden;
}

.c1 {
  margin-right: 0.375rem;
}

.c0 {
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Roboto Condensed Bold',Arial,serif;
  font-weight: bold;
  font-size: 0.875rem;
  border: none;
  border-radius: 1.875rem;
  text-transform: uppercase;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  padding: 0.3125rem 0.9375rem;
  color: rgb(255,255,255);
  background: rgb(118,118,118);
  background-color: rgb(118,118,118);
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2);
  padding: 0.3125rem 0.625rem;
}

.c2 {
  margin-right: 0.375rem;
  margin: 0;
}

@media (min-width:47.94rem) {
  .c3 {
    display: block;
    visibility: visible;
  }
}

@media (min-width:47.94rem) {
  .c1 {
    margin-right: 0.625rem;
  }
}

@media (min-width:47.94rem) {
  .c0 {
    font-size: 1rem;
  }
}

@media (min-width:47.94rem) {
  .c0 {
    padding: 0.5625rem 1.25rem;
  }
}

@media (min-width:47.94rem) {
  .c2 {
    margin-right: 0.625rem;
  }
}

<button
  className="c0"
  disabled={true}
  id="proposal-submit-button"
  type="submit"
>
  <span
    className="ButtonElements__IconInButton-sc-13hw5ul-9 c1 c2"
  >
    <svg
      aria-hidden={true}
      className="svg-inline--fa fa-pencil-alt fa-w-16 "
      data-icon="pencil-alt"
      data-prefix="fas"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
  <div
    className="c3 HiddenElements__HiddenOnMobile-sc-1k80phd-1 c3"
  >
    common.propose
  </div>
</button>
`;

exports[`ProposalSubmitButtonComponent snapshot must match the snapshot if field is expanded 1`] = `
.c2 {
  display: none;
  visibility: hidden;
}

.c1 {
  margin-right: 0.375rem;
}

.c0 {
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Roboto Condensed Bold',Arial,serif;
  font-weight: bold;
  font-size: 0.875rem;
  border: none;
  border-radius: 1.875rem;
  text-transform: uppercase;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  padding: 0.3125rem 0.9375rem;
  color: rgb(255,255,255);
  background: rgb(118,118,118);
  background-color: rgb(118,118,118);
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2);
  padding: 0.3125rem 0.625rem;
}

.c3 {
  display: inline;
  visibility: visible;
}

@media (min-width:47.94rem) {
  .c2 {
    display: block;
    visibility: visible;
  }
}

@media (min-width:47.94rem) {
  .c1 {
    margin-right: 0.625rem;
  }
}

@media (min-width:47.94rem) {
  .c0 {
    font-size: 1rem;
  }
}

@media (min-width:47.94rem) {
  .c0 {
    padding: 0.5625rem 1.25rem;
  }
}

<button
  className="c0"
  disabled={true}
  id="proposal-submit-button"
  type="submit"
>
  <span
    className="c1 ButtonElements__IconInButton-sc-13hw5ul-9 c1"
  >
    <svg
      aria-hidden={true}
      className="svg-inline--fa fa-pencil-alt fa-w-16 "
      data-icon="pencil-alt"
      data-prefix="fas"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
  <span
    className="c2 c3"
  >
    common.propose
  </span>
</button>
`;

exports[`ProposalSubmitButtonComponent snapshot must match the snapshot if user can submit 1`] = `
.c3 {
  display: none;
  visibility: hidden;
}

.c1 {
  margin-right: 0.375rem;
}

.c0 {
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Roboto Condensed Bold',Arial,serif;
  font-weight: bold;
  font-size: 0.875rem;
  border: none;
  border-radius: 1.875rem;
  text-transform: uppercase;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  padding: 0.3125rem 0.9375rem;
  color: rgb(255,255,255);
  background: rgb(232,24,68);
  background-color: rgb(232,24,68);
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.5);
  padding: 0.3125rem 0.625rem;
}

.c2 {
  margin-right: 0.375rem;
  margin: 0;
}

@media (min-width:47.94rem) {
  .c3 {
    display: block;
    visibility: visible;
  }
}

@media (min-width:47.94rem) {
  .c1 {
    margin-right: 0.625rem;
  }
}

@media (min-width:47.94rem) {
  .c0 {
    font-size: 1rem;
  }
}

@media (min-width:47.94rem) {
  .c0 {
    padding: 0.5625rem 1.25rem;
  }
}

@media (min-width:47.94rem) {
  .c2 {
    margin-right: 0.625rem;
  }
}

<button
  className="c0"
  id="proposal-submit-button"
  tabIndex={0}
  type="submit"
>
  <span
    className="ButtonElements__IconInButton-sc-13hw5ul-9 c1 c2"
  >
    <svg
      aria-hidden={true}
      className="svg-inline--fa fa-pencil-alt fa-w-16 "
      data-icon="pencil-alt"
      data-prefix="fas"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
  <div
    className="c3 HiddenElements__HiddenOnMobile-sc-1k80phd-1 c3"
  >
    common.propose
  </div>
</button>
`;

exports[`ProposalSubmitButtonComponent snapshot must match the snapshot if user can't submit 1`] = `
.c3 {
  display: none;
  visibility: hidden;
}

.c1 {
  margin-right: 0.375rem;
}

.c0 {
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Roboto Condensed Bold',Arial,serif;
  font-weight: bold;
  font-size: 0.875rem;
  border: none;
  border-radius: 1.875rem;
  text-transform: uppercase;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  padding: 0.3125rem 0.9375rem;
  color: rgb(255,255,255);
  background: rgb(118,118,118);
  background-color: rgb(118,118,118);
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2);
  padding: 0.3125rem 0.625rem;
}

.c2 {
  margin-right: 0.375rem;
  margin: 0;
}

@media (min-width:47.94rem) {
  .c3 {
    display: block;
    visibility: visible;
  }
}

@media (min-width:47.94rem) {
  .c1 {
    margin-right: 0.625rem;
  }
}

@media (min-width:47.94rem) {
  .c0 {
    font-size: 1rem;
  }
}

@media (min-width:47.94rem) {
  .c0 {
    padding: 0.5625rem 1.25rem;
  }
}

@media (min-width:47.94rem) {
  .c2 {
    margin-right: 0.625rem;
  }
}

<button
  className="c0"
  disabled={true}
  id="proposal-submit-button"
  type="submit"
>
  <span
    className="ButtonElements__IconInButton-sc-13hw5ul-9 c1 c2"
  >
    <svg
      aria-hidden={true}
      className="svg-inline--fa fa-pencil-alt fa-w-16 "
      data-icon="pencil-alt"
      data-prefix="fas"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
  <div
    className="c3 HiddenElements__HiddenOnMobile-sc-1k80phd-1 c3"
  >
    common.propose
  </div>
</button>
`;
